fixed ul alignment

--- a/style.css
+++ b/style.css
@@ -44,6 +44,11 @@ a:hover {
   background: rgb(26, 49, 66);
   color: rgb(210, 191, 183);
   text-align: center;
+  list-style-position: inside;
+}
+
+.card-projects ul {
+  padding-inline-start: 0px;
 }
 
 .card-projects p {
